--- a/ejemplobbdd2-cache-distribuida/pom.xml
+++ b/ejemplobbdd2-cache-distribuida/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.2.RELEASE</version>
+		<version>2.2.6.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -44,7 +44,7 @@
 		<!-- Hazelcast for distributed session storage -->
 		<dependency>
 			<groupId>org.springframework.session</groupId>
-			<artifactId>spring-session</artifactId>
+			<artifactId>spring-session-hazelcast</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.hazelcast</groupId>
